# django-tinymce4-plus

./: .gitignore  .pre-commit-config.yml  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  manage.py  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini  typos.toml
.github/workflows/: code-quality.yml  deploy-docs.yml  publish.yml
advanced/: index.html
changelog/: index.html
configuration/: index.html
contributing/: index.html
docs/: advanced.md  changelog.md  configuration.md  contributing.md  example_project.md  index.md  installation.md  usage.md
example_project/: index.html
installation/: index.html
search/: search_index.json
test_tinymce/: admin.py  models.py  settings.py  urls.py  views.py  wsgi.py
test_tinymce/migrations/: 0001_initial.py  0002_testchildmodel.py
test_tinymce/tests/: test_tinymce.py
tinymce/: settings.py  views.py  widgets.py
usage/: index.html
